# LeaseHub

./: .env  .gitignore  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: nextjs.yml
anchor/: Anchor.toml  package.json
anchor/programs/lease-hub-solana-dapp/: Cargo.toml
anchor/programs/lease-hub-solana-dapp/src/: constants.rs  error.rs  lib.rs  state.rs  utils.rs
anchor/programs/lease-hub-solana-dapp/src/instructions/: mod.rs
anchor/programs/lease-hub-solana-dapp/src/instructions/stake/: create_house_nft_and_coin.rs  create_order.rs  create_rewards_coin.rs  create_stake_coins.rs  create_stake_pool.rs  masterchef.rs  masterchef.sol  mod.rs  yfi_get_rent_rewards.rs
anchor/src/: index.ts  lease-hub-solana-dapp-exports.ts
anchor/tests/: lease-hub-solana-dapp.spec.ts
apps/web/: .gitignore  README.md  next.config.js  package.json  tailwind.config.js
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/config/: site.tsx
apps/web/styles/: font.css  tailwind.css
web/: postcss.config.js  tailwind.config.js  tsconfig.json
web/app/: global.css  layout.tsx  page.tsx
web/app/investment/: page.tsx
web/components/: index.tsx
web/components/Img/: index.tsx
web/components/button/: index.tsx
web/components/heading/: index.tsx
web/components/home/: feature.tsx  view.tsx
web/components/input/: index.tsx
web/components/lease-hub-solana-dapp/: lease-hub-solana-dapp-data-access.tsx  lease-hub-solana-dapp-feature.tsx  (+1 more)
web/styles/: index.css
(+37 files in other folders)
